--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <li><a href="#" class="nav-link">SERVICES</a></li>
         <li><a href="#" class="nav-link">CONTACT US</a></li>
       </ul>
+      <div class="burger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </nav>
     <!-- navbar -->
     <!-- services -->
