benerin banner sama ganti text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="img/aisle.jpg" alt="aisle" />
       </div>
       <div class="text-aisle" data-aos="fade" data-duration="5000">
-        <h1>ailse</h1>
+        <h1>pelaminan</h1>
         <p>Kami juga menyediakan beberapa pelaminan maupun backdrop yang dapat anda pilih sesuai keinginan anda</p>
       </div>
     </section>
